--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,51 +1,1 @@
-# Please don't edit this file, and use the version generated at
-# http://rainboard.laas.fr/project/hpp-gepetto-viewer/.gitlab-ci.yml
-
-variables:
-  GIT_SUBMODULE_STRATEGY: "recursive"
-  CCACHE_BASEDIR: "${CI_PROJECT_DIR}"
-  CCACHE_DIR: "${CI_PROJECT_DIR}/ccache"
-
-cache:
-  paths:
-    - ccache
-
-.robotpkg-hpp-gepetto-viewer: &robotpkg-hpp-gepetto-viewer
-  except:
-    - gh-pages
-  script:
-    - mkdir -p ccache
-    - cd /root/robotpkg/graphics
-    - git pull
-    - cd hpp-gepetto-viewer
-    - make checkout MASTER_REPOSITORY="dir ${CI_PROJECT_DIR}"
-    - make install
-    - cd work.$(hostname)/$(make show-var VARNAME=DISTNAME)
-    - make test
-
-robotpkg-hpp-gepetto-viewer-16.04-release:
-  <<: *robotpkg-hpp-gepetto-viewer
-  image: eur0c.laas.fr:5000/humanoid-path-planner/hpp-gepetto-viewer/hpp-gepetto-viewer:16.04
-
-robotpkg-hpp-gepetto-viewer-18.04-release:
-  <<: *robotpkg-hpp-gepetto-viewer
-  image: eur0c.laas.fr:5000/humanoid-path-planner/hpp-gepetto-viewer/hpp-gepetto-viewer:18.04
-
-doc-coverage:
-  <<: *robotpkg-hpp-gepetto-viewer
-  image: eur0c.laas.fr:5000/humanoid-path-planner/hpp-gepetto-viewer/hpp-gepetto-viewer:16.04
-  before_script:
-    - echo -e 'CXXFLAGS+= --coverage\nLDFLAGS+= --coverage\nPKG_DEFAULT_OPTIONS= debug' >> /opt/openrobots/etc/robotpkg.conf
-  after_script:
-    - cd /root/robotpkg/graphics/hpp-gepetto-viewer
-    - cd work.$(hostname)/$(make show-var VARNAME=DISTNAME)
-    - make doc
-    - mv doc/doxygen-html ${CI_PROJECT_DIR}
-    - mkdir -p ${CI_PROJECT_DIR}/coverage/
-    - gcovr -r .
-    - gcovr -r . --html --html-details -o ${CI_PROJECT_DIR}/coverage/index.html
-  artifacts:
-    expire_in: 1 day
-    paths:
-      - doxygen-html/
-      - coverage/
+include: http://rainboard.laas.fr/project/hpp-gepetto-viewer/.gitlab-ci.yml
