--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ FINDPYTHON(${PYTHON_DESIRED_VERSION} EXACT)
 
 ADD_REQUIRED_DEPENDENCY("hpp-corbaserver >= 4")
 ADD_OPTIONAL_DEPENDENCY("gepetto-viewer-corba")
-IF(GEPETTO_VIEWER_CORBA_FOUND)
+IF(GEPETTO_VIEWER_CORBA_FOUND AND EXISTS GEPETTO_VIEWER_CORBA_CMAKE_PLUGIN)
   INCLUDE(${GEPETTO_VIEWER_CORBA_CMAKE_PLUGIN})
 ENDIF()
 
