Fix installation of GUI pyplugin

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,6 @@ INSTALL_PYTHON_FILES ("hpp/gepetto/manipulation" viewer.py
 INSTALL_PYTHON_FILES ("hpp/gepetto/gui" path_graph.py
   __init__.py)
 
-IF(GEPETTO_VIEWER_CORBA_FOUND AND EXISTS GEPETTO_VIEWER_CORBA_CMAKE_PLUGIN)
+IF(GEPETTO_VIEWER_FOUND AND EXISTS ${GEPETTO_VIEWER_CMAKE_PLUGIN})
   GEPETTO_GUI_PYPLUGIN ("hpp/gepetto/gui/path_graph.py")
 ENDIF()
