--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,9 +37,9 @@ PROJECT(${PROJECT_NAME} ${PROJECT_ARGS})
 FINDPYTHON()
 
 ADD_REQUIRED_DEPENDENCY("hpp-corbaserver >= 4")
-ADD_OPTIONAL_DEPENDENCY("gepetto-viewer-corba")
-IF(GEPETTO_VIEWER_CORBA_FOUND AND EXISTS GEPETTO_VIEWER_CORBA_CMAKE_PLUGIN)
-  INCLUDE(${GEPETTO_VIEWER_CORBA_CMAKE_PLUGIN})
+ADD_OPTIONAL_DEPENDENCY("gepetto-viewer")
+IF(GEPETTO_VIEWER_FOUND AND EXISTS ${GEPETTO_VIEWER_CMAKE_PLUGIN})
+  INCLUDE(${GEPETTO_VIEWER_CMAKE_PLUGIN})
 ENDIF()
 
 ADD_SUBDIRECTORY(src)
