[CMake] install package.xml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,3 +41,5 @@ ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
 INSTALL(TARGETS ${PROJECT_NAME} EXPORT ${TARGETS_EXPORT_NAME} DESTINATION lib)
 
 ADD_SUBDIRECTORY(src)
+
+INSTALL(FILES package.xml DESTINATION share/${PROJECT_NAME})
