pre-commit run -a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,45 +1,45 @@
 #!/usr/bin/env python
 
-# Copyright (c) 2014, 2020 CNRS
-# Author: Florent Lamiraux, Guilhem Saurel
+# Copyright (c) 2014, 2020 CNRS Author: Florent Lamiraux, Guilhem Saurel
 #
-# This file is part of hpp-gepetto-viewer.
-# hpp-gepetto-viewer is free software: you can redistribute it
-# and/or modify it under the terms of the GNU Lesser General Public
-# License as published by the Free Software Foundation, either version
-# 3 of the License, or (at your option) any later version.
+# This file is part of hpp-gepetto-viewer. hpp-gepetto-viewer is free software:
+# you can redistribute it and/or modify it under the terms of the GNU Lesser
+# General Public License as published by the Free Software Foundation, either
+# version 3 of the License, or (at your option) any later version.
 #
-# hpp-gepetto-viewer is distributed in the hope that it will be
-# useful, but WITHOUT ANY WARRANTY; without even the implied warranty
-# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-# General Lesser Public License for more details.  You should have
-# received a copy of the GNU Lesser General Public License along with
-# hpp-gepetto-viewer.  If not, see
+# hpp-gepetto-viewer is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Lesser Public License
+# for more details.  You should have received a copy of the GNU Lesser General
+# Public License along with hpp-gepetto-viewer.  If not, see
 # <http://www.gnu.org/licenses/>.
 
-#dependency: python-rospkg
+# dependency: python-rospkg
 
-CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
+cmake_minimum_required(VERSION 3.1)
 
-SET(PROJECT_NAME hpp-gepetto-viewer)
-SET(PROJECT_DESCRIPTION "Display of hpp robots and obstacles in gepetto-viewer")
+set(PROJECT_NAME hpp-gepetto-viewer)
+set(PROJECT_DESCRIPTION "Display of hpp robots and obstacles in gepetto-viewer")
 
-SET(PROJECT_USE_CMAKE_EXPORT TRUE)
+set(PROJECT_USE_CMAKE_EXPORT TRUE)
 
-INCLUDE(cmake/hpp.cmake)
-INCLUDE(cmake/python.cmake)
+include(cmake/hpp.cmake)
+include(cmake/python.cmake)
 
-COMPUTE_PROJECT_ARGS(PROJECT_ARGS LANGUAGES CXX)
-PROJECT(${PROJECT_NAME} ${PROJECT_ARGS})
+compute_project_args(PROJECT_ARGS LANGUAGES CXX)
+project(${PROJECT_NAME} ${PROJECT_ARGS})
 
-FINDPYTHON()
+findpython()
 
-ADD_PROJECT_DEPENDENCY("hpp-corbaserver" REQUIRED)
-ADD_PROJECT_DEPENDENCY("gepetto-viewer")
+add_project_dependency("hpp-corbaserver" REQUIRED)
+add_project_dependency("gepetto-viewer")
 
-ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
-INSTALL(TARGETS ${PROJECT_NAME} EXPORT ${TARGETS_EXPORT_NAME} DESTINATION lib)
+add_library(${PROJECT_NAME} INTERFACE)
+install(
+  TARGETS ${PROJECT_NAME}
+  EXPORT ${TARGETS_EXPORT_NAME}
+  DESTINATION lib)
 
-ADD_SUBDIRECTORY(src)
+add_subdirectory(src)
 
-INSTALL(FILES package.xml DESTINATION share/${PROJECT_NAME})
+install(FILES package.xml DESTINATION share/${PROJECT_NAME})
