--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
-      - run: nix build --accept-flake-config
+      - run: nix build --accept-flake-config -L
       - run: nix run .#cachix push gepetto $(readlink result)
