--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -15,3 +15,5 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - run: nix build --accept-flake-config -L
       - run: nix run .#cachix push gepetto $(readlink result)
+        env:
+          CACHIX_AUTH_TOKEN = ${{ secrets.CACHIX_AUTH_TOKEN }}
