--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -16,4 +16,4 @@ jobs:
       - run: nix build --accept-flake-config -L
       - run: nix run .#cachix push gepetto $(readlink result)
         env:
-          CACHIX_AUTH_TOKEN = ${{ secrets.CACHIX_AUTH_TOKEN }}
+          CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
