--- a/package.xml
+++ b/package.xml
@@ -1,18 +1,34 @@
-<?xml version='1.0'?>
- <package format='2'>
- <name>hpp-gepetto-viewer</name>
- <version>6.0.0</version>
- <description>Display of hpp robots and obstacles in gepetto-viewer </description>
+<?xml version="1.0"?>
+<package format="3">
+  <name>hpp-gepetto-viewer</name>
+  <version>6.0.0</version>
+  <description>Display of hpp robots and obstacles in gepetto-viewer </description>
 
- <maintainer email='hpp@laas.fr'>Joseph Mirabel</maintainer>
- <license>LGPL</license>
+  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
 
- <!-- <url type='website'>https://github.com/humanoid-path-planner/hpp-gepetto-viewer </url> -->
+  <author>Joseph Mirabel</author>
+  <author>Florent Lamiraux et al.</author>
 
- <author>Joseph Mirabel</author>
- <author>Florent Lamiraux et al.</author>
+  <license>BSD-2</license>
 
- <buildtool_depend>catkin</buildtool_depend>
- <exec_depend>hpp-corbaserver</exec_depend>
- <exec_depend>gepetto-viewer</exec_depend>
- </package>
+  <url type="website">https://github.com/humanoid-path-planner/hpp-gepetto-viewer</url>
+  <url type="repository">https://github.com/humanoid-path-planner/hpp-gepetto-viewer</url>
+  <url type="bugtracker">https://github.com/humanoid-path-planner/hpp-gepetto-viewer/issues</url>
+
+  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
+  <buildtool_depend>cmake</buildtool_depend>
+
+  <build_depend>doxygen</build_depend>
+
+  <exec_depend>hpp-corbaserver</exec_depend>
+  <exec_depend>gepetto-viewer</exec_depend>
+
+  <!-- The following tags are recommended by REP-136 -->
+  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
+  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
+
+  <export>
+    <build_type>cmake</build_type>
+  </export>
+</package>
